<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    
    <item
        android:id="@+id/nav_dashboard"
        android:icon="@drawable/ic_dashboard"
        android:title="@string/dashboard" />
        
    <item
        android:id="@+id/nav_rooms"
        android:icon="@drawable/ic_room"
        android:title="@string/rooms" />
        
    <item
        android:id="@+id/nav_temperature"
        android:icon="@drawable/ic_thermostat"
        android:title="@string/temperature" />
        
    <item
        android:id="@+id/nav_security"
        android:icon="@drawable/ic_security"
        android:title="@string/security" />
        
    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/settings" />
        
    <item
        android:id="@+id/nav_logout"
        android:icon="@drawable/ic_logout"
        android:title="@string/logout" />

</menu>